--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 body {
   background: url(/yellow-pills.jpeg);
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
 }
@@ -54,7 +55,7 @@ body {
 }
 
 .trending-gifs {
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(46, 10, 148, 0.5);
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   padding: 10px;
@@ -66,8 +67,9 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   border: 3px solid white;
+  border-radius: 10px;
   grid-column-gap: 15px;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.5);
   margin: 30px 0;
   color: white;
 }
